# pyphreeqc

./: CMakeLists.txt  pyproject.toml
.github/workflows/: test_unpinned_deps.yml
src/: bindings.cpp  iphreeqc_wrapper.cpp
src/pyphreeqc/: __init__.py  core.py  interface.py  solution.py  var.py
tests/: test_phreeqc.py  test_phreeqc_solution.py  test_var.py
